# integracao-python

./: README.md  install_python.txt  main.py  pyproject.toml
src/: __init__.py  consultaEscala.py  consultaFone.py  consultaNascimento.py  consultaServico.py  consultaUser.py  consultaUserByChapa.py  controleServico.py  saidaRecolhida.py  utils.py
